# prompt_attack

./: .dockerignore  .gitignore  README.md  RESEARCH_PROGRESS.md  pyproject.toml
configs/: flux2_resnet18.yaml  flux2_resnet18_eval.yaml  flux2_resnet18_imagenet10.yaml  flux2_resnet18_imagenet10_nodino.yaml  flux2_resnet18_nodino.yaml  flux2_resnet50_imagenet10.yaml
docker/: .env.example  Dockerfile  docker-compose.yml
scripts/: check_imagenet_dataset.py  run_attack.py  select_imagenet_subset.py  smoke_test.py  time_attack.py
src/prompt_attack/: __init__.py  config.py
src/prompt_attack/attacks/: learnable_tokens.py  losses.py  runner.py  soft_tokens.py
src/prompt_attack/data/: imagenet.py
src/prompt_attack/generators/: __init__.py  base.py  factory.py  flux2.py  mock.py
src/prompt_attack/metrics/: fid.py  image_quality.py  nr_iqa.py  summary.py
src/prompt_attack/models/: semantic.py  victim.py
src/prompt_attack/utils/: image.py  io.py  seed.py  wandb_logger.py
tests/: test_config_and_data.py  test_learnable_tokens.py  test_losses.py  test_runner.py  test_soft_tokens.py  test_summary.py  test_wandb_logger.py
