[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-attack"
version = "0.1.0"
description = "FLUX.2 learnable soft-token natural adversarial image experiments."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.26",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pandas>=2.2",
    "pillow>=10.3",
    "pyiqa>=0.1.13",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
    "transformers>=4.45",
    "wandb>=0.18",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]
cuda128 = [
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["external/pytorch_fid"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
